<?xml version="1.0" encoding="UTF-8"?>
<project>
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <artifactId>companies-house-parent</artifactId>
    <groupId>uk.gov.companieshouse</groupId>
    <version>2.1.11</version>
  </parent>
  <name>data-reconciliation</name>
  <description>Application to compare Oracle and MongoDB data</description>
  <artifactId>data-reconciliation</artifactId>
  <version>unversioned</version>
  <properties>
    <java.version>21</java.version>

    <!-- CH Internal -->
    <kafka-models.version>3.0.26</kafka-models.version>
    <structured-logging.version>3.0.36</structured-logging.version>
    <!-- Third party -->
<!--        <elasticsearch.version>8.0.0</elasticsearch.version>-->
        <elasticsearch.version>8.19.9</elasticsearch.version>
<!--    <elasticsearch.version>7.17.29</elasticsearch.version>-->
    <oracle.ojdbc11.version>23.6.0.24.10</oracle.ojdbc11.version>
    <apache.camel.version>4.11.0</apache.camel.version>
    <spring.boot.version>3.5.9</spring.boot.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <amazon-sts.version>2.30.14</amazon-sts.version>

    <!-- Plugin -->
    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <jib-maven-plugin.version>3.4.4</jib-maven-plugin.version>

    <!-- Overrides -->
    <!-- CVE-2020-13956 -->
    <apache-httpclient.version>4.5.13</apache-httpclient.version>

    <!-- CVE-2024-8184 -->
    <jetty-http2.version>11.0.24</jetty-http2.version>

    <commons-lang3.version>3.20.0</commons-lang3.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <!--https://camel.apache.org/camel-spring-boot/4.8.x/index.html#_camel_spring_boot_bom_vs_camel_spring_boot_dependencies_bom-->
      <dependency>
        <groupId>org.apache.camel.springboot</groupId>
        <artifactId>camel-spring-boot-bom</artifactId>
        <version>${apache.camel.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.camel.springboot</groupId>
        <artifactId>camel-spring-boot-dependencies</artifactId>
        <version>${apache.camel.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <!--todo-->
<!--      <dependency>-->
<!--        <groupId>at.yawk.lz4</groupId>-->
<!--        <artifactId>lz4-java</artifactId>-->
<!--        <version>1.10.2</version>-->
<!--      </dependency>-->
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>2.25.3</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <!--https://users.camel.apache.narkive.com/pHkOVOnc/no-camelcontext-defined-yet-so-cannot-inject-into-bean-or-->
    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-management</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.springboot</groupId>
      <artifactId>camel-spring-boot-starter</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.eclipse.jetty.http2</groupId>
          <artifactId>jetty-http2-server</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.eclipse.jetty.http2</groupId>
          <artifactId>jetty-http2-common</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.eclipse.jetty.http2</groupId>
          <artifactId>jetty-http2-client</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpclient</artifactId>
      <version>${apache-httpclient.version}</version>
      <exclusions>
        <exclusion>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>uk.gov.companieshouse</groupId>
      <artifactId>structured-logging</artifactId>
      <version>${structured-logging.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>*</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-logging</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.springboot</groupId>
      <artifactId>camel-mongodb-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.springboot</groupId>
      <artifactId>camel-jdbc-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.springboot</groupId>
      <artifactId>camel-timer-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.springboot</groupId>
      <artifactId>camel-kafka-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.springboot</groupId>
      <artifactId>camel-avro-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-jackson</artifactId>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.springboot</groupId>
      <artifactId>camel-jackson-avro-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.elasticsearch</groupId>
      <artifactId>elasticsearch</artifactId>
      <version>${elasticsearch.version}</version>
      <exclusions>
        <exclusion>
          <groupId>at.yawk.lz4</groupId>
          <artifactId>lz4-java</artifactId>
        </exclusion>
<!--        <exclusion>-->
<!--          <groupId>org.lz4</groupId>-->
<!--          <artifactId>lz4-java</artifactId>-->
<!--        </exclusion>-->
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.elasticsearch.client</groupId>
      <artifactId>elasticsearch-rest-client</artifactId>
      <version>${elasticsearch.version}</version>
    </dependency>
    <dependency>
      <groupId>co.elastic.clients</groupId>
      <artifactId>elasticsearch-java</artifactId>
      <version>${elasticsearch.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>2.17.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.springboot</groupId>
      <artifactId>camel-aws2-s3-starter</artifactId>
      <!--CVE-2025-24970-->
      <exclusions>
        <exclusion>
          <groupId>io.netty</groupId>
          <artifactId>netty-handler</artifactId>
        </exclusion>
        <!--CVE-2025-25193-->
        <exclusion>
          <groupId>software.amazon.awssdk</groupId>
          <artifactId>netty-nio-client</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.springboot</groupId>
      <artifactId>camel-csv-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>uk.gov.companieshouse</groupId>
      <artifactId>kafka-models</artifactId>
      <version>${kafka-models.version}</version>
      <exclusions>
        <exclusion>
          <groupId>org.eclipse.jetty.http2</groupId>
          <artifactId>http2-server</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.eclipse.jetty.http2</groupId>
          <artifactId>http2-common</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.eclipse.jetty.http2</groupId>
          <artifactId>http2-client</artifactId>
        </exclusion>
        <exclusion>
          <groupId>net.minidev</groupId>
          <artifactId>json-smart</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-webapp</artifactId>
        </exclusion>
        <exclusion>
          <groupId>org.lz4</groupId>
          <artifactId>lz4-java</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-jdbc</artifactId>
    </dependency>
    <dependency>
      <groupId>com.oracle.database.jdbc</groupId>
      <artifactId>ojdbc11</artifactId>
      <version>${oracle.ojdbc11.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.camel.springboot</groupId>
      <artifactId>camel-caffeine-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.camel</groupId>
      <artifactId>camel-test-spring-junit5</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring.boot.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>properties</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
          <forkCount>1</forkCount>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>${jib-maven-plugin.version}</version>
        <configuration>
          <container>
            <expandClasspathDependencies>true</expandClasspathDependencies>
          </container>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
      </plugin>
    </plugins>
  </build>
</project>
